--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,49 @@
-annotated-types==0.7.0
-blis==1.2.1
-catalogue==2.0.10
-certifi==2025.10.5
-charset-normalizer==3.4.3
-click==8.3.0
-cloudpathlib==0.23.0
-confection==0.1.5
-conllu==6.0.0
-cymem==2.0.11
-idna==3.10
-Jinja2==3.1.6
-joblib==1.5.2
-langcodes==3.5.0
-language_data==1.3.0
-marisa-trie==1.3.1
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
+apparmor==4.0.1
+attrs==23.2.0
+bcc==0.29.1
+blinker==1.7.0
+certifi==2023.11.17
+chardet==5.2.0
+command-not-found==0.3
+cryptography==41.0.7
+distro==1.9.0
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+gpg==1.18.0
+httplib2==0.20.4
+idna==3.6
+jsonpointer==2.0
+jsonschema==4.10.3
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+LibAppArmor==4.0.1
+Markdown==3.5.2
+markdown-it-py==3.0.0
 mdurl==0.1.2
-murmurhash==1.0.13
-nmslib-metabrainz==2.1.3
-numpy==1.26.4
-packaging==25.0
-pandas==2.3.3
-preshed==3.0.10
-psutil==7.1.0
-pybind11==3.0.1
-pydantic==2.12.0
-pydantic_core==2.41.1
-Pygments==2.19.2
-pysbd==0.3.4
-python-dateutil==2.9.0.post0
-pytz==2025.2
-requests==2.32.5
-rich==14.1.0
-scikit-learn==1.7.2
-scipy==1.16.2
-scispacy==0.6.2
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-smart_open==7.3.1
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-thinc==8.3.4
-threadpoolctl==3.6.0
-tqdm==4.67.1
-typer==0.19.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-wasabi==1.1.3
-weasel==0.4.1
-wheel==0.45.1
-wrapt==1.17.3
+meson==1.3.2
+netaddr==0.8.0
+oauthlib==3.2.2
+packaging==24.0
+Pygments==2.17.2
+PyJWT==2.7.0
+pyparsing==3.1.1
+pyrsistent==0.20.0
+python-apt==2.7.7+ubuntu5
+python-dotenv==1.0.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+setuptools==68.1.2
+six==1.16.0
+ssh-import-id==5.11
+systemd-python==235
+texttable==1.6.7
+ubuntu-pro-client==8001
+ufw==0.36.2
+urllib3==2.0.7
+wadllib==1.3.6
+websocket-client==1.7.0
+wheel==0.42.0
